k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: powerline-slides-svc
spec:
  selector:
    app: powerline-slides
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
  type: ClusterIP
